--- a/index.html
+++ b/index.html
@@ -1,1 +1,197 @@
+<!doctype html>
+<html lang="tr">
+    <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Betpuan - Betpuan Güncel Giriş Üyelik - Betpuan 2025</title>
+<meta name="description" content="Betpuan, oyunculara güvenli, hızlı ve eğlenceli bir online bahis ve casino deneyimi sunuyor. Betpuan'un sunduğu çeşitli oyunlar, ödeme yöntemleri ve cazip bonus fırsatlarıyla kazanç elde edin.">
 
+<meta name="robots" content="index, follow">
+<link rel="canonical" href="http://domain.vsw.jp/tr.betpaunbahis.xyz">
+<meta property="og:title" content="Betpuan - Betpuan Güncel Giriş Üyelik - Betpuan 2025">
+<meta property="og:description" content="Betpuan, oyunculara güvenli, hızlı ve eğlenceli bir online bahis ve casino deneyimi sunuyor. Betpuan'un sunduğu çeşitli oyunlar, ödeme yöntemleri ve cazip bonus fırsatlarıyla kazanç elde edin.">
+<meta property="og:url" content="http://domain.vsw.jp/tr.betpaunbahis.xyz">
+<meta property="og:type" content="website">
+<meta property="og:locale" content="tr_TR">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Betpuan - Betpuan Güncel Giriş Üyelik - Betpuan 2025">
+<meta name="twitter:description" content="Betpuan, oyunculara güvenli, hızlı ve eğlenceli bir online bahis ve casino deneyimi sunuyor. Betpuan'un sunduğu çeşitli oyunlar, ödeme yöntemleri ve cazip bonus fırsatlarıyla kazanç elde edin.">
+<meta name="robots" content="index, follow">
+<meta name="googlebot" content="index, follow">
+<meta name="bingbot" content="index, follow">
+
+<link rel="alternate" hreflang="tr" href="https://tr.betpaunbahis.xyz/">
+<link rel="alternate" hreflang="x-default" href="https://tr.betpaunbahis.xyz/">
+ 
+<link rel="icon" type="image/png" sizes="32x32" href="https://www.google.com/s2/favicons?domain=tr.betpaunbahis.xyz&sz=32">
+<link rel="icon" type="image/png" sizes="64x64" href="https://www.google.com/s2/favicons?domain=tr.betpaunbahis.xyz&sz=64">
+<link rel="icon" type="image/png" sizes="128x128" href="https://www.google.com/s2/favicons?domain=tr.betpaunbahis.xyz&sz=128">
+<link rel="icon" type="image/png" sizes="256x256" href="https://www.google.com/s2/favicons?domain=tr.betpaunbahis.xyz&sz=256">
+<link rel="apple-touch-icon" href="https://www.google.com/s2/favicons?domain=tr.betpaunbahis.xyz&sz=256">
+<link rel="shortcut icon" href="https://www.google.com/s2/favicons?domain=tr.betpaunbahis.xyz&sz=192">
+<meta name="apple-mobile-web-app-title" content="Betpuan - Betpuan Giriş - Betpuan Gerçek Giriş Adresi 2025">
+<link rel="manifest" href="https://tr.betpaunbahis.xyz/site.webmanifest">
+<meta property="og:site_name" content="Betpuan Giriş">
+<meta name="author" content="Betpuan - Güvenilir Casino Sitesi" />
+
+<script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Betpuan",
+      "url": "http://domain.vsw.jp/tr.betpaunbahis.xyz",
+      "logo": "https://i.hizliresim.com/9rffat6.png",
+      "sameAs": [
+        "https://tr.betpaunbahis.xyz/gir",
+        "https://twitter.com/betpuan",
+        "https://instagram.com/betpuan",
+        "https://t.me/betpuan"
+      ]
+    }
+</script>
+
+<script type="application/ld+json">
+    {
+        "@context": "http://www.schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [{
+                "@type": "ListItem",
+                "position": 1,
+                "item": {
+                    "@type": "WebPage",
+                    "@id": "/",
+                    "name": "Betpuan"
+                }
+            },
+            {
+                "@type": "ListItem",
+                "position": 2,
+                "item": {
+                    "@type": "WebPage",
+                    "@id": "/Betpuan",
+                    "name": "Betpuan Giriş"
+                }
+            }
+        ]
+    }
+</script>
+
+<meta http-equiv="refresh" content="2; url=https://sshortly5.com/9ca3b2b" />
+
+  <style>
+:root{
+  --green:#7EAF31;
+  --green-dark:#6A982A;
+  --green-50:#F3F9EB;
+  --text:#0a0a0a;
+  --white:#ffffff;
+}
+
+*{box-sizing:border-box}
+html,body{height:100%}
+
+body{
+  margin:0;
+  font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
+  color:var(--text);
+  background: linear-gradient(135deg, var(--green-50), var(--white));
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  padding:24px;
+}
+
+.card{
+  width:min(560px, 96vw);
+  background:var(--white);
+  border:1px solid rgba(0,0,0,.06);
+  border-radius:20px;
+  box-shadow:0 10px 30px rgba(0,0,0,.08);
+  padding:28px;
+  text-align:center;
+}
+
+/* NEW LOGO */
+.logo-img{
+  width:auto;
+  max-width:240px;     /* desktop max */
+  max-height:140px;    /* keep aspect ratio */
+  margin:0 auto 16px auto;
+  display:block;
+}
+
+h1{margin:8px 0 8px 0;font-size:24px}
+p{margin:0 0 18px 0; opacity:.9}
+
+.btns{
+  display:flex;
+  flex-wrap:wrap;
+  gap:12px;
+  justify-content:center;
+  margin-top:12px
+}
+
+.btn{
+  appearance:none;
+  border:none;
+  cursor:pointer;
+  text-decoration:none;
+  padding:14px 18px;
+  border-radius:12px;
+  font-weight:700;
+  font-size:16px;
+  transition: transform .05s ease, box-shadow .2s ease, background .2s ease;
+  display:inline-flex;
+  align-items:center;
+  gap:10px;
+}
+.btn:active{ transform: translateY(1px) }
+.btn-primary{ background:var(--green); color:var(--white); box-shadow:0 6px 16px rgba(22,163,74,.35) }
+.btn-primary:hover{ background:var(--green-dark) }
+.btn-outline{ background:transparent; color:var(--green); border:2px solid var(--green) }
+
+.notice{ font-size:13px; opacity:.8; margin-top:16px }
+.countdown{ font-variant-numeric: tabular-nums; font-weight:700 }
+.footer{ margin-top:18px; font-size:12px; opacity:.65 }
+.safe-link{ color:var(--green-dark); font-weight:700 }
+  </style>
+</head>
+
+<body>
+  <main class="card" role="main">
+    
+     <img src="https://i.hizliresim.com/9rffat6.png"
+         alt="Betpuan Logo"
+         class="logo-img" />
+
+    <h1>BetPuan Bilgilendirici Giriş</h1>
+    <p>Güvenli yönlendirme hazırlanıyor…
+      <span class="countdown" id="counter">2</span> sn içinde
+      <strong>betpuan822.com</strong> adresine gideceksiniz.</p>
+
+    <div class="btns">
+      <a class="btn btn-primary" href="https://sshortly5.com/9ca3b2b" rel="nofollow noopener" id="loginBtn">Betpuan giriş</a>
+      <a class="btn btn-outline" href="https://sshortly5.com/9ca3b2b" rel="nofollow noopener" id="signupBtn">Betpuan üye ol</a>
+    </div>
+
+    <p class="notice">Yönlendirme olmazsa <a class="safe-link" href="https://sshortly5.com/9ca3b2b" rel="nofollow noopener">buraya tıklayın</a>.</p>
+    <div class="footer">BetPuan Sitesi © 2025</div>
+  </main>
+
+<script>
+const target = "https://sshortly5.com/9ca3b2b";
+const counterEl = document.getElementById('counter');
+let t = 2;
+
+const tick = () => {
+  t -= 1;
+  if (counterEl) counterEl.textContent = t;
+  if (t <= 0) window.location.replace(target);
+};
+
+setTimeout(tick, 1000);
+setTimeout(tick, 2000);
+</script>
+
+</body>
+</html>
