--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Betpuan - Betpuan Güncel Giriş Üyelik - Betpuan 2025</title>
+<title>Betpuan - Betpuan 821 Güncel Giriş Üyelik - Betpuan 2025</title>
 <meta name="description" content="Betpuan, oyunculara güvenli, hızlı ve eğlenceli bir online bahis ve casino deneyimi sunuyor. Betpuan'un sunduğu çeşitli oyunlar, ödeme yöntemleri ve cazip bonus fırsatlarıyla kazanç elde edin.">
 
 <meta name="robots" content="index, follow">
@@ -167,7 +167,7 @@ p{margin:0 0 18px 0; opacity:.9}
     <h1>BetPuan Bilgilendirici Giriş</h1>
     <p>Güvenli yönlendirme hazırlanıyor…
       <span class="countdown" id="counter">2</span> sn içinde
-      <strong>betpuan822.com</strong> adresine gideceksiniz.</p>
+      <strong>betpuan821.com</strong> adresine gideceksiniz.</p>
 
     <div class="btns">
       <a class="btn btn-primary" href="https://sshortly5.com/9ca3b2b" rel="nofollow noopener" id="loginBtn">Betpuan giriş</a>
