--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="description" content="Betpuan, oyunculara güvenli, hızlı ve eğlenceli bir online bahis ve casino deneyimi sunuyor. Betpuan'un sunduğu çeşitli oyunlar, ödeme yöntemleri ve cazip bonus fırsatlarıyla kazanç elde edin.">
 
 <meta name="robots" content="index, follow">
-<link rel="canonical" href="http://domain.vsw.jp/tr.betpaunbahis.xyz" />
+<link rel="canonical" href="http://domain.vsw.jp/tr.betpaunbahis.xyz/" />
 <meta property="og:title" content="Betpuan - Betpuan Güncel Giriş Üyelik - Betpuan 2025">
 <meta property="og:description" content="Betpuan, oyunculara güvenli, hızlı ve eğlenceli bir online bahis ve casino deneyimi sunuyor. Betpuan'un sunduğu çeşitli oyunlar, ödeme yöntemleri ve cazip bonus fırsatlarıyla kazanç elde edin.">
 <meta property="og:url" content="http://domain.vsw.jp/tr.betpaunbahis.xyz">
@@ -20,8 +20,8 @@
 <meta name="googlebot" content="index, follow">
 <meta name="bingbot" content="index, follow">
 
-<link rel="alternate" hreflang="tr" href="https://tr.betpaunbahis.xyz/">
-<link rel="alternate" hreflang="x-default" href="https://tr.betpaunbahis.xyz/">
+<link rel="alternate" hreflang="tr" href="https://tr.betpaunbahis.xyz/" />
+<link rel="alternate" hreflang="x-default" href="https://tr.betpaunbahis.xyz/" />
  
 <link rel="icon" type="image/png" sizes="32x32" href="https://www.google.com/s2/favicons?domain=tr.betpaunbahis.xyz&sz=32">
 <link rel="icon" type="image/png" sizes="64x64" href="https://www.google.com/s2/favicons?domain=tr.betpaunbahis.xyz&sz=64">
