--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <meta name="description" content="Betpuan, oyunculara güvenli, hızlı ve eğlenceli bir online bahis ve casino deneyimi sunuyor. Betpuan'un sunduğu çeşitli oyunlar, ödeme yöntemleri ve cazip bonus fırsatlarıyla kazanç elde edin.">
 
 <meta name="robots" content="index, follow">
-<link rel="canonical" href="http://domain.vsw.jp/tr.betpaunbahis.xyz/" />
+<link rel="canonical" href="https://bleusushiphilly.com/" />
 <meta property="og:title" content="Betpuan - Betpuan Güncel Giriş Üyelik - Betpuan 2025">
 <meta property="og:description" content="Betpuan, oyunculara güvenli, hızlı ve eğlenceli bir online bahis ve casino deneyimi sunuyor. Betpuan'un sunduğu çeşitli oyunlar, ödeme yöntemleri ve cazip bonus fırsatlarıyla kazanç elde edin.">
-<meta property="og:url" content="http://domain.vsw.jp/tr.betpaunbahis.xyz">
+<meta property="og:url" content="https://bleusushiphilly.com">
 <meta property="og:type" content="website">
 <meta property="og:locale" content="tr_TR">
 <meta name="twitter:card" content="summary_large_image">
@@ -39,7 +39,7 @@
       "@context": "https://schema.org",
       "@type": "Organization",
       "name": "Betpuan",
-      "url": "http://domain.vsw.jp/tr.betpaunbahis.xyz",
+      "url": "https://bleusushiphilly.com",
       "logo": "https://i.hizliresim.com/9rffat6.png",
       "sameAs": [
         "https://tr.betpaunbahis.xyz/gir",
