--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
     <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Betpuan - Betpuan 821 Güncel Giriş Üyelik - Betpuan 2025</title>
+<title>Kripto İle Para Yatırılan Casino Siteleri</title>
 <meta name="description" content="Betpuan, oyunculara güvenli, hızlı ve eğlenceli bir online bahis ve casino deneyimi sunuyor. Betpuan'un sunduğu çeşitli oyunlar, ödeme yöntemleri ve cazip bonus fırsatlarıyla kazanç elde edin.">
 
 <meta name="robots" content="index, follow">
 <link rel="canonical" href="https://bleusushiphilly.com/" />
-<meta property="og:title" content="Betpuan - Betpuan Güncel Giriş Üyelik - Betpuan 2025">
+<meta property="og:title" content="Kripto İle Para Yatırılan Casino Siteleri">
 <meta property="og:description" content="Betpuan, oyunculara güvenli, hızlı ve eğlenceli bir online bahis ve casino deneyimi sunuyor. Betpuan'un sunduğu çeşitli oyunlar, ödeme yöntemleri ve cazip bonus fırsatlarıyla kazanç elde edin.">
 <meta property="og:url" content="https://bleusushiphilly.com">
 <meta property="og:type" content="website">
 <meta property="og:locale" content="tr_TR">
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Betpuan - Betpuan Güncel Giriş Üyelik - Betpuan 2025">
+<meta name="twitter:title" content="Kripto İle Para Yatırılan Casino Siteleri">
 <meta name="twitter:description" content="Betpuan, oyunculara güvenli, hızlı ve eğlenceli bir online bahis ve casino deneyimi sunuyor. Betpuan'un sunduğu çeşitli oyunlar, ödeme yöntemleri ve cazip bonus fırsatlarıyla kazanç elde edin.">
 <meta name="robots" content="index, follow">
 <meta name="googlebot" content="index, follow">
@@ -29,9 +29,9 @@
 <link rel="icon" type="image/png" sizes="256x256" href="https://www.google.com/s2/favicons?domain=tr.betpaunbahis.xyz&sz=256">
 <link rel="apple-touch-icon" href="https://www.google.com/s2/favicons?domain=tr.betpaunbahis.xyz&sz=256">
 <link rel="shortcut icon" href="https://www.google.com/s2/favicons?domain=tr.betpaunbahis.xyz&sz=192">
-<meta name="apple-mobile-web-app-title" content="Betpuan - Betpuan Giriş - Betpuan Gerçek Giriş Adresi 2025">
+<meta name="apple-mobile-web-app-title" content="Kripto İle Para Yatırılan Casino Siteleri">
 <link rel="manifest" href="https://tr.betpaunbahis.xyz/site.webmanifest">
-<meta property="og:site_name" content="Betpuan Giriş">
+<meta property="og:site_name" content="Kripto İle Para Yatırılan Casino Siteleri">
 <meta name="author" content="Betpuan - Güvenilir Casino Sitesi" />
 
 <script type="application/ld+json">
